--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -48,7 +48,7 @@ enable_manual_linking = false
 [auth.email]
 enable_signup = true
 double_confirm_changes = true
-enable_confirmations = false
+enable_confirmations = true
 
 [edge_runtime]
 enabled = true
